feat: New experience for skills
